# tet-splatting

./: .gitignore  LICENSE  README.md  custom_functions.py  index.html  requirements.txt  run_tetsplatting.py
TetrahedronRender/: CMakeLists.txt
TetrahedronRender/include/: auxiliary.h  config.h  preprocess.h  rasterizer_impl.h  render.h  tet_gradients.h  visible_tet.h
TetrahedronRender/src/: ext.cpp  preprocess.cu  render.cu  tet_gradients.cu  visible_tet.cu
configs/nd-mv-tetsplatting/: geo-refine.yaml  geo.yaml  tex.yaml
load/: 16_tets.ply
load/tets/: 16_tets.npz
scripts/tetsplatting/: run_batch.sh  run_single.sh
threestudio/data/: dmtet_multiview.py  dmtet_uncond.py
threestudio/models/geometry/: __init__.py  implicit_sdf_tetsplatting.py  tetrahedra_sdf_grid.py
threestudio/models/renderers/: __init__.py  tetsplatting_rasterizer.py
threestudio/systems/: __init__.py  base.py  nd_mvdream_tetsplatting.py
